; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-integrity.c_remove_journal_node.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-integrity.c_remove_journal_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_integrity_c = type { i32 }
%struct.journal_node = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dm_integrity_c*, %struct.journal_node*)* @remove_journal_node to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @remove_journal_node(%struct.dm_integrity_c* %0, %struct.journal_node* %1) #0 {
  %3 = alloca %struct.dm_integrity_c*, align 8
  %4 = alloca %struct.journal_node*, align 8
  store %struct.dm_integrity_c* %0, %struct.dm_integrity_c** %3, align 8
  store %struct.journal_node* %1, %struct.journal_node** %4, align 8
  %5 = load %struct.journal_node*, %struct.journal_node** %4, align 8
  %6 = getelementptr inbounds %struct.journal_node, %struct.journal_node* %5, i32 0, i32 0
  %7 = call i32 @RB_EMPTY_NODE(i32* %6)
  %8 = call i32 @BUG_ON(i32 %7)
  %9 = load %struct.journal_node*, %struct.journal_node** %4, align 8
  %10 = getelementptr inbounds %struct.journal_node, %struct.journal_node* %9, i32 0, i32 0
  %11 = load %struct.dm_integrity_c*, %struct.dm_integrity_c** %3, align 8
  %12 = getelementptr inbounds %struct.dm_integrity_c, %struct.dm_integrity_c* %11, i32 0, i32 0
  %13 = call i32 @rb_erase(i32* %10, i32* %12)
  %14 = load %struct.journal_node*, %struct.journal_node** %4, align 8
  %15 = call i32 @init_journal_node(%struct.journal_node* %14)
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @RB_EMPTY_NODE(i32*) #1

declare dso_local i32 @rb_erase(i32*, i32*) #1

declare dso_local i32 @init_journal_node(%struct.journal_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
